fix layout issue with long account names in all browsers except IE

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -56,6 +56,8 @@
     }
     th.account {
       text-align: left;
+      max-width: 0;
+      overflow: hidden;
     }
     th.edit-link {
       text-align: right;
